--- a/Supervised_Pretraining.ipynb
+++ b/Supervised_Pretraining.ipynb
@@ -53,8 +53,8 @@
     "evaluationType = 'group'\n",
     "# 'subject','group'\n",
     "\n",
-    "architecture = \"ispl_inception\"\n",
-    "# \"MobileHART_XS,HART_Small,ispl_inception,deepConvLSTM\"\n",
+    "architecture = \"ispl\"\n",
+    "# \"mobilehart_xs,hart,ispl,deepConvlstm\"\n",
     "\n",
     "# 1024,2048\n",
     "finetune_epoch = 1\n",
@@ -250,14 +250,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if(architecture == \"HART_Small\"):\n",
+    "if(architecture == \"hart\"):\n",
     "    learningModel = model.HART(input_shape,output_shape)\n",
-    "elif(architecture == \"ispl_inception\"):\n",
+    "elif(architecture == \"ispl\"):\n",
     "    learningModel = model.ispl_inception(input_shape,output_shape)\n",
-    "elif(architecture == \"deepConvLSTM\"):\n",
+    "elif(architecture == \"deepConvlstm\"):\n",
     "    learningModel = model.deepConvLSTM((128,6,1),output_shape)\n",
     "else:\n",
-    "    learningModel = model.mobileHART_XS(input_shape,output_shape)\n",
+    "    learningModel = model.mobilehart_xs(input_shape,output_shape)\n",
     "    \n",
     "if(not os.path.exists(initWeightDir)):\n",
     "    print(\"model weights initialization not found, generating one\")\n",
